# hermes-wechat-bridge

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  findings.md  progress.md  pyproject.toml  task_plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml  wechat_integration.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  labeler.yml  release.yml  scorecard.yml
bridge/: __init__.py  cli.py  server.py
bridge/hermes/: __init__.py  client.py  runner.py
bridge/integrations/: __init__.py
bridge/protocol/: __init__.py  delivery.py  errors.py  message.py  session.py
bridge/runtime/: __init__.py  config.py  cron.py  dedupe.py  diagnostics.py  friendly_card.py  guardian.py  health.py  logging.py  notifier.py  retry.py  router.py  (+1 more)
distribution/: config.example.yaml  manifest.lock.json
docs/: architecture.md  compatibility-matrix.md  configuration.md  failure-modes.md  gateway-flow.md  hermes-native-integration.md  maintainer-guide.md  message-lifecycle.md  migration-map.md  open-source-launch.md  production-checklist.md  protocol.md  quickstart.md  runtime-notifications.md  security-model.md  service-api.md  sync-strategy.md  troubleshooting.md  upgrade-playbook.md  wechat-setup.md
schemas/: delivery-result.schema.json  message-event.schema.json  platform-capability.schema.json
scripts/: check_release_ready.py
simulator/: wechat_event_simulator.py
tests/: conftest.py
(+85 files in other folders)
