[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-wechat-bridge"
version = "0.1.1"
description = "A stable and friendly bridge from Hermes Agent to WeChat."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Hermes WeChat Bridge contributors" }]
keywords = ["hermes", "wechat", "gateway", "agent", "chatops", "bridge"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/luSkyl/hermes-wechat-bridge"
Documentation = "https://github.com/luSkyl/hermes-wechat-bridge/tree/main/docs"
Issues = "https://github.com/luSkyl/hermes-wechat-bridge/issues"
Source = "https://github.com/luSkyl/hermes-wechat-bridge"

[project.optional-dependencies]
dev = ["build>=1.2.0", "pytest>=8.0.0", "ruff>=0.8.0", "twine>=5.0.0"]
yaml = ["PyYAML>=6.0.0"]

[project.scripts]
hermes-wechat-bridge = "bridge.cli:main"

[tool.setuptools.packages.find]
include = ["bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
